@@ -1,6 +1,7 @@
 * 2014-09-28 - thorben.betten@open-xchange.com
 
  - Fix for bug 34617: Signal proper write permission in case "ENABLE_INTERNAL_USER_EDIT" is set to "false"
+ - Fix for bug 34656: Use proper cache region name to not silently fall-back to default one
 
 * 2014-09-26 - jan.bauerdick@open-xchange.com
 
